<resources>
    <string name="app_name">AirSense</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password"><u>Reset Password?</u></string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="user_name">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="map">Map</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="default_weather">Default Weather</string>
    <string name="humidity_default_weather">Humidity (%)</string>
    <string name="manufacturer_default_weather">Manufacturer</string>
    <string name="place_default_weather">Place</string>
    <string name="rainfall_default_weather">Rainfall (mm)</string>
    <string name="sun_alti_default_weather">Sun altitude</string>
    <string name="sun_azi_default_weather">Sun azimuth</string>
    <string name="sun_irr_default_weather">Sun irradiance</string>
    <string name="sun_zenith_default_weather">Sun zenith</string>
    <string name="tags_default_weather">Tags</string>
    <string name="temperature_default_weather">Temperature (°C)</string>
    <string name="uv_index_default_weather">UV index</string>
    <string name="wind_direction_default_weather">Wind direction</string>
    <string name="wind_speed_default_weather">Wind speed (km/h)</string>
    <string name="nan_value_default_weather">-</string>
    <string name="humidity_value_default_weather">89</string>
    <string name="margin_top_value_default_weather">10dp</string>
    <string name="text_size_value_default_weather">16sp</string>
    <string name="light_default_light">Light</string>
    <string name="brightness_default_light">Brightness (%)</string>
    <string name="colour_RGB_default_light">Colour RGB</string>
    <string name="colour_temperature_default_light">Colour temperature (K)</string>
    <string name="email_default_light">Email</string>
    <string name="on_off_default_light">On off</string>
    <string name="tags_default_light">Tags</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="hi_user">Hi, </string>
    <string name="temperature">Temperature</string>
    <string name="celsius">°C</string>
    <string name="percent">%</string>
    <string name="min">Min: </string>
    <string name="max">Max: </string>
    <string name="km_h">km/h</string>
    <string name="mm">mm</string>
    <string name="setting" translatable="false">Settings</string>
    <string name="account_infor" translatable="false">Account Information</string>
    <string name="email_address" translatable="false">Email</string>
    <string name="start">GET STARTED</string>
    <string name="uid" translatable="false">Uid</string>
    <string name="create_on" translatable="false">Create on</string>
    <string name="username" translatable="false">Username</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="username_or_email" translatable="false">Username or Email</string>
    <string name="find" translatable="false">Find</string>
    <string name="returnBtn" translatable="false">Return</string>
    <string name="newPw" translatable="false">New Password</string>
    <string name="confirmNewPw" translatable="false">Confirm New Password</string>
    <string name="resetPw" translatable="false">Confirm</string>
    <string name="logout" translatable="false">Log out</string>
</resources>