<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="26dp"
    android:layout_marginEnd="26dp"
    android:animateLayoutChanges="true"
    android:id="@+id/llLogin"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBoxTextInputLayout"
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBoxTextInputLayout"
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvResetPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/hint_color"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLoginSignin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textColor="@color/text_createAccount"
        android:background="@drawable/bg_button_no_solid"
        />
</LinearLayout>