<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivIconWeather"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_weather"
            />
        <TextView
            android:id="@+id/tvDefaultWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/default_weather"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/humidity_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llTitle"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHumidity"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/manufacturer_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHumidity"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvManufacturer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/place_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValuePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvManufacturer"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvRainfall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPlace"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/rainfall_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueRainfall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPlace"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvSunAlti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRainfall"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/sun_alti_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueSunAlti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRainfall"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/nan_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvSunAzi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunAlti"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/sun_azi_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueSunAzi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunAlti"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/nan_value_default_weather"
        android:textSize="10sp"
        />
    <TextView
        android:id="@+id/tvSunIrr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunAzi"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/sun_irr_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueSunIrr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunAzi"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/nan_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvSunZen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunIrr"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/sun_zenith_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueSunZen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunIrr"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/nan_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunZen"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/tags_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSunZen"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTags"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/temperature_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTags"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvUvIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTemperature"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/uv_index_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueUvIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTemperature"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvWindDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUvIndex"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/wind_direction_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueWindDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUvIndex"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvWindDirection"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/wind_speed_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvWindDirection"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>