<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">
    <LinearLayout
        android:id="@+id/llTitleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivIconWeather"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_light"
            />
        <TextView
            android:id="@+id/tvDefaultLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/light_default_light"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tvBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llTitleLight"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/brightness_default_light"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llTitleLight"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvColourRgb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvBrightness"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/colour_RGB_default_light"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueColourRgb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvBrightness"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/nan_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvColourTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvColourRgb"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/colour_temperature_default_light"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueColourTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvColourRgb"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvColourTemperature"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/email_default_light"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvColourTemperature"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/on_off_default_light"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value_default_weather"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvOnOff"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/tags_default_light"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tvValueTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="16sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>