<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="26dp"
    android:layout_marginEnd="26dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBoxTextInputLayout"
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/username_or_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/llFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btReturn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_button_login"
            android:text= "@string/returnBtn"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btFind"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_button_login"
            android:text= "@string/find"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBoxTextInputLayout"
        android:id="@+id/tilNewPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/newPw"
        android:visibility="gone">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tietNewPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBoxTextInputLayout"
        android:id="@+id/tilConfirmNewPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmNewPw"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietConfirmNewPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/llReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        android:visibility="gone">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btReturn1"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_button_login"
            android:text= "@string/returnBtn"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btResetpw"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_button_login"
            android:text= "@string/resetPw"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>